syntax = "proto3";

package email;
option go_package =".;email";

service EmailService {
  rpc SendEmails(SendEmailsRequest) returns (SendEmailsResponse);
  rpc SendIndividualEmail(SendIndividualEmailRequest) returns (SendIndividualEmailResponse);
}

message News {
  string title = 1;
  string description = 2;
  string topic_name = 3;
}

message UserWithNews {
  string email = 1;
  repeated News news_list = 2;
}

message SendEmailsRequest {
  repeated UserWithNews users_with_news = 1;
}

message SendEmailsResponse {
  map<string, string> email_status = 1;
}
message  SendIndividualEmailRequest{
  string email=1;
  string verificationCode=2;
}
message SendIndividualEmailResponse{
  string message=1;
  bool success=2;
}
